Actualizar textos en la página

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 <body>
     <div class="container">
         <header>
-            <h1>🕯️ RECORDAR</h1>
-            <p class="subtitulo">Cementerio Virtual y Memorial Digital</p>
+            <h1>🕯️ REMBOX 🕯️</h1>
+            <p class="subtitulo">Cementerio Virtual y Memorial Digital by javier Marroquin</p>
         </header>
 
         <main>
