Actualizar textos en la página

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
         <header>
             <h1>🕯️ REMBOX 🕯️</h1>
-            <p class="subtitulo">Cementerio Virtual y Memorial Digital by javier Marroquin</p>
+            <p class="subtitulo">Cementerio Virtual y Memorial Digital</p>
         </header>
 
         <main>
